<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.Activity.AuthActivity"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameLayout"
        android:visibility="gone"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/MainLayout"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp">


            <TextView
                android:id="@+id/hello_developer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/hello_restaurant"
                android:textColor="@color/foreground"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hello_developer_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:text="@string/welcome"
                android:textColor="@color/foreground"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/subtitle_text_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/you_are_not_a_member_register"
            android:textColor="@color/foreground"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>