<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:padding="20dp"
    tools:context=".ui.Fragment.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/iv_icon"
            android:background="@drawable/icon"
            android:layout_above="@id/layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent"
            android:id="@+id/layout"
            >

            <TextView
                android:id="@+id/nice_to_see_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/nice_to_see_you"
                android:textColor="@color/foreground"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/login_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nice_to_see_you_text_view"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/username_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/selection"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/foreground"
                            android:textColorHint="@color/foreground"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_below="@+id/username_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/selection"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/foreground"
                            android:textColorHint="@color/foreground"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_input_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/forgot_password"
                    android:textColor="@color/red"
                    android:textSize="15sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/login_button_card_view"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/login_input_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/login"
                        android:textColor="@color/foreground"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/you_are_not_a_member_register"
            android:textColor="@color/foreground"
            android:textSize="15sp" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>