<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:padding="20dp"
    android:id="@+id/coordinator"
    tools:context=".ui.Fragment.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/nice_to_see_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/welcome"
                android:textColor="@color/foreground"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/login_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nice_to_see_you_text_view"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/username_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/selection"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/foreground"
                            android:textColorHint="@color/foreground"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/email_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_below="@id/username_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/selection"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/email_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/foreground"
                            android:textColorHint="@color/foreground"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_below="@+id/email_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/selection"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_passowrd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/foreground"
                            android:textColorHint="@color/foreground"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirm_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_below="@+id/password_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/selection"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:hint="@string/confirm"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/foreground"
                            android:textColorHint="@color/foreground"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/login_button_card_view"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/login_input_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/register"
                        android:textColor="@color/foreground"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/already_registered"
            android:textColor="@color/foreground"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>